--- a/CergasApp/package.json
+++ b/CergasApp/package.json
@@ -22,7 +22,7 @@
     "react-native-dev-menu": "^4.1.1",
     "react-native-gesture-handler": "^2.24.0",
     "react-native-reanimated": "^3.16.7",
-    "react-native-safe-area-context": "^4.14.1",
+    "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-vector-icons": "^10.2.0"
   },
