--- a/CergasApp/package.json
+++ b/CergasApp/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-community/datetimepicker": "^8.3.0",
+    "@react-native-community/slider": "^4.5.6",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/elements": "^2.2.5",
     "@react-navigation/native": "^7.0.14",
@@ -18,6 +19,7 @@
     "@react-navigation/stack": "^7.1.1",
     "@rneui/themed": "^4.0.0-rc.8",
     "expo": "~52.0.35",
+    "expo-location": "~18.0.7",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-native": "0.76.7",
