--- a/CergasApp/package.json
+++ b/CergasApp/package.json
@@ -31,7 +31,8 @@
     "react-native-reanimated": "^3.16.7",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-vector-icons": "^10.2.0",
+    "expo-task-manager": "~12.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
