--- a/CergasApp/package.json
+++ b/CergasApp/package.json
@@ -21,6 +21,8 @@
     "expo": "~52.0.35",
     "expo-location": "~18.0.7",
     "expo-status-bar": "~2.0.1",
+    "expo-task-manager": "~12.0.5",
+    "formik": "^2.4.6",
     "react": "18.3.1",
     "react-native": "0.76.7",
     "react-native-dev-menu": "^4.1.1",
@@ -32,7 +34,7 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-vector-icons": "^10.2.0",
-    "expo-task-manager": "~12.0.5"
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
