--- a/CergasApp/package.json
+++ b/CergasApp/package.json
@@ -12,16 +12,20 @@
   "dependencies": {
     "@react-native-community/datetimepicker": "^8.3.0",
     "@react-native-community/slider": "^4.5.6",
+    "@react-native-firebase/app": "^21.12.0",
+    "@react-native-firebase/auth": "^21.12.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/elements": "^2.2.5",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
     "@react-navigation/stack": "^7.1.1",
     "@rneui/themed": "^4.0.0-rc.8",
+    "apisauce": "^3.1.0",
     "expo": "~52.0.35",
     "expo-location": "~18.0.7",
     "expo-status-bar": "~2.0.1",
     "expo-task-manager": "~12.0.5",
+    "firebase": "^11.4.0",
     "formik": "^2.4.6",
     "react": "18.3.1",
     "react-native": "0.76.7",
