--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-community/datetimepicker": "^8.3.0",
-    "@react-native-community/slider": "^4.5.6",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/datetimepicker": "8.2.0",
+    "@react-native-community/slider": "4.5.5",
     "@react-native-firebase/app": "^21.12.0",
     "@react-native-firebase/auth": "^21.12.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
@@ -21,7 +22,8 @@
     "@react-navigation/stack": "^7.1.1",
     "@rneui/themed": "^4.0.0-rc.8",
     "apisauce": "^3.1.0",
-    "expo": "~52.0.35",
+    "expo": "^52.0.37",
+    "expo-auth-session": "~6.0.3",
     "expo-location": "~18.0.7",
     "expo-status-bar": "~2.0.1",
     "expo-task-manager": "~12.0.5",
@@ -31,16 +33,14 @@
     "react-native": "0.76.7",
     "react-native-dev-menu": "^4.1.1",
     "react-native-geolocation-service": "^5.3.1",
-    "react-native-gesture-handler": "^2.24.0",
+    "react-native-gesture-handler": "~2.20.2",
     "react-native-google-places-autocomplete": "^2.5.7",
-    "react-native-maps": "^1.20.1",
+    "react-native-maps": "1.18.0",
     "react-native-reanimated": "^3.16.7",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-vector-icons": "^10.2.0",
-    "yup": "^1.6.1",
-    "@react-native-async-storage/async-storage": "1.23.1",
-    "expo-auth-session": "~6.0.3"
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
