--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-community/datetimepicker": "8.2.0",
     "@react-native-community/slider": "4.5.5",
     "@react-native-firebase/app": "^21.12.0",
@@ -22,7 +22,7 @@
     "@react-navigation/stack": "^7.1.1",
     "@rneui/themed": "^4.0.0-rc.8",
     "apisauce": "^3.1.0",
-    "expo": "^52.0.37",
+    "expo": "^52.0.0",
     "expo-auth-session": "~6.0.3",
     "expo-location": "~18.0.7",
     "expo-status-bar": "~2.0.1",
