--- a/package.json
+++ b/package.json
@@ -22,11 +22,15 @@
     "@react-navigation/stack": "^7.1.1",
     "@rneui/themed": "^4.0.0-rc.8",
     "apisauce": "^3.1.0",
+    "eas-cli": "^15.0.14",
     "expo": "^52.0.0",
     "expo-auth-session": "~6.0.3",
+    "expo-dev-client": "^5.0.12",
     "expo-location": "~18.0.7",
+    "expo-random": "^14.0.1",
     "expo-status-bar": "~2.0.1",
     "expo-task-manager": "~12.0.5",
+    "expo-web-browser": "~14.0.2",
     "firebase": "^11.4.0",
     "formik": "^2.4.6",
     "react": "18.3.1",
@@ -40,7 +44,8 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-vector-icons": "^10.2.0",
-    "yup": "^1.6.1"
+    "yup": "^1.6.1",
+    "expo-crypto": "~14.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
