--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eas-cli": "^15.0.14",
     "expo": "^52.0.0",
     "expo-auth-session": "~6.0.3",
+    "expo-crypto": "~14.0.2",
     "expo-dev-client": "^5.0.12",
     "expo-location": "~18.0.7",
     "expo-random": "^14.0.1",
@@ -44,8 +45,7 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-vector-icons": "^10.2.0",
-    "yup": "^1.6.1",
-    "expo-crypto": "~14.0.2"
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
