--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "expo-dev-client": "^5.0.12",
     "expo-location": "~18.0.7",
     "expo-random": "^14.0.1",
+    "expo-secure-store": "~14.0.1",
     "expo-status-bar": "~2.0.1",
     "expo-task-manager": "~12.0.5",
     "expo-web-browser": "~14.0.2",
@@ -47,7 +48,10 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-vector-icons": "^10.2.0",
-    "yup": "^1.6.1"
+    "react-native-webview": "^13.13.4",
+    "yup": "^1.6.1",
+    "expo-linking": "~7.0.5",
+    "expo-router": "~4.0.18"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
