--- a/package.json
+++ b/package.json
@@ -29,8 +29,11 @@
     "expo-constants": "^17.0.8",
     "expo-crypto": "~14.0.2",
     "expo-dev-client": "^5.0.12",
+    "expo-health-connect": "^0.1.1",
+    "expo-linking": "~7.0.5",
     "expo-location": "~18.0.7",
     "expo-random": "^14.0.1",
+    "expo-router": "~4.0.18",
     "expo-secure-store": "~14.0.1",
     "expo-status-bar": "~2.0.1",
     "expo-task-manager": "~12.0.5",
@@ -43,19 +46,19 @@
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-google-places-autocomplete": "^2.5.7",
+    "react-native-health-connect": "^3.3.2",
     "react-native-maps": "1.18.0",
     "react-native-reanimated": "^3.16.7",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-webview": "^13.13.4",
-    "yup": "^1.6.1",
-    "expo-linking": "~7.0.5",
-    "expo-router": "~4.0.18"
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@react-native-community/cli": "latest"
+    "@react-native-community/cli": "latest",
+    "expo-build-properties": "^0.13.2"
   },
   "private": true
 }
