--- a/app.json
+++ b/app.json
@@ -87,6 +87,13 @@
             "minSdkVersion": 26
           }
         }
+      ],
+      [
+        "expo-location",
+        {
+          "locationAlwaysAndWhenInUsePermission": "Allow $(PRODUCT_NAME) to use your location",
+          "isAndroidBackgroundLocationEnabled": true
+        }
       ]
     ]
   }
