--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "react-native-screens": "~4.4.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-webview": "^13.13.4",
-    "yup": "^1.6.1"
+    "yup": "^1.6.1",
+    "expo-keep-awake": "~14.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
