--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "expo-crypto": "~14.0.2",
     "expo-dev-client": "^5.0.12",
     "expo-health-connect": "^0.1.1",
+    "expo-keep-awake": "~14.0.3",
     "expo-linking": "~7.0.5",
     "expo-location": "~18.0.7",
     "expo-random": "^14.0.1",
@@ -53,8 +54,7 @@
     "react-native-screens": "~4.4.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-webview": "^13.13.4",
-    "yup": "^1.6.1",
-    "expo-keep-awake": "~14.0.3"
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
